CostalCloud/force-app/main/default/objects/Payment_Record__c.object
<CustomObject>
    <description>Joiner object between work order and invoice/payment object.  Primarily used for the installer payment tracking.</description>
    <fields>
        <fullName>Installer_Amount__c</fullName>
        <formula>Work_Order__r.Installer_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice/Payment</label>
        <referenceTo>Invoices_Payments__c</referenceTo>
        <relationshipLabel>Payment Records</relationshipLabel>
        <relationshipName>Payment_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Work_Order__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Payment Records</relationshipLabel>
        <relationshipName>Payment_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Record</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Payment Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>